syntax = "proto3";

package orders.order_approved.v1;

message OrderApproved {
    string event_id = 1;
    string correlation_id = 2;
    string order_id = 3;
    string customer_id = 4;
    string created_at = 5;
}
